--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>/GetCyber/</title>
+  <title>/CyberGet/</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
   <link rel="apple-touch-icon" href="Img/icon_apple.png" type="image/png" />
