--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
       </div>
     </div>
+  </header>
 
     <section class="slider">
       <div class="container">
@@ -403,6 +404,7 @@
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.formstyler.min.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
