--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="header__content-inner">
           <div class="header__logo">
             <a href="#">
-              <img src="img/icon.png" alt="logo">
+              <img src="Img/icon.png" alt="logo">
             </a>
           </div>
           <nav class="menu">
@@ -123,7 +123,7 @@
         </div>
         <div class="serices__items">
           <div class="serices__item">
-            <img src="img/about-1.png" alt="">
+            <img src="Img/about-1.png" alt="">
             <div class="serices__item-title">
               ERP
             </div>
@@ -140,7 +140,7 @@
           </div>
 
           <div class="serices__item">
-            <img src="img/about-2.png" alt="">
+            <img src="Img/about-2.png" alt="">
             <div class="serices__item-title">
               JavaScript
             </div>
@@ -156,7 +156,7 @@
           </div>
 
           <div class="serices__item">
-            <img src="img/about-3.png" alt="">
+            <img src="Img/about-3.png" alt="">
             <div class="serices__item-title">
               VCS
             </div>
@@ -326,7 +326,7 @@
           </div>
           <a href="#" class="news__blog">
             <div class="news__img">
-              <img src="img/news-1.jpg" alt="" width="260">
+              <img src="Img/news-1.jpg" alt="" width="260">
               <div class="news__date">03.04</div>
             </div>
             <div class="news__blog-title">
@@ -338,7 +338,7 @@
           </a>
           <a href="#" class="news__blog">
             <div class="news__img">
-              <img src="img/news-2.jpg" alt="" width="260">
+              <img src="Img/news-2.jpg" alt="" width="260">
               <div class="news__date">03.04</div>
             </div>
             <div class="news__blog-title">
